--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <h1>"Tic Tac Toe"</h1>
     <div class="grid" id="grid">
-      <div class="cell" id="00">00</div>
-      <div class="cell" id="01">01</div>
-      <div class="cell" id="02"></div>
-      <div class="cell" id="03"></div>
-      <div class="cell" id="04"></div>
-      <div class="cell" id="05"></div>
-      <div class="cell" id="06"></div>
-      <div class="cell" id="07"></div>
-      <div class="cell" id="08"></div>
+      <div class="cell" data-cell-index="00"></div>
+      <div class="cell" data-cell-index="01"></div>
+      <div class="cell" data-cell-index="02"></div>
+      <div class="cell" data-cell-index="10"></div>
+      <div class="cell" data-cell-index="11"></div>
+      <div class="cell" data-cell-index="12"></div>
+      <div class="cell" data-cell-index="20"></div>
+      <div class="cell" data-cell-index="21"></div>
+      <div class="cell" data-cell-index="22"></div>
     </div>
     <button id="reset">Start New Game</button>
     <script src="js/script.js"></script>
